<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kitti_converter</name>
  <version>1.0.0</version>
  <description>Convert KITTI dataset to ROS2 bag file the easy way!</description>

  <maintainer email="aidanjones289@gmail.com">Aidan Jones</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/aidanjones3/kitti_converter/</url>
  <url type="bugtracker">https://github.com/aidanjones3/kitti_converter/issues</url>
  <url type="repository">https://github.com/aidanjones3/kitti_converter</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag2_py</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>